--- a/mendoza2017.bib
+++ b/mendoza2017.bib
@@ -4,7 +4,7 @@
 	type = {Ph. {D}.},
 	title = {Modelos basados en c{\'o}pulas para la simulaci{\'o}n estoc{\'a}stica conjunta de propiedades de redes de fracturas discretas en medios porosos fracturados},
 	language = {Spanish},
-	school = {Autonomous National University of Mexico UNAM},
+	school = {Universidad Nacional Autonoma de Mexico, UNAM},
 	author = {Mendoza-Torres, Francisco},
 	month = 11,
 	year = {2017}
